--- a/Folio/assets/css/main.css
+++ b/Folio/assets/css/main.css
@@ -95,9 +95,12 @@ h6 {
 }
 h3 {
   text-align: justify;
-  margin-bottom: 5%;
+  margin-bottom: 2%;
 }
-
+.mynem{
+  -webkit-text-stroke: red;
+  -webkit-text-stroke-color: blue;
+}
 /* PHP Email Form Messages
 ------------------------------*/
 .php-email-form .error-message {
@@ -110,6 +113,7 @@ h3 {
   font-weight: 600;
 }
 
+
 .php-email-form .sent-message {
   display: none;
   color: #ffffff;
@@ -118,6 +122,9 @@ h3 {
   padding: 15px;
   margin-bottom: 24px;
   font-weight: 600;
+}
+.description{
+  text-align: justify;
 }
 
 .php-email-form .loading {
@@ -1188,7 +1195,7 @@ section,
 # Contact Section
 --------------------------------------------------------------*/
 .contact .info-wrap {
-  background-color: var(--surface-color);
+  background-color: var(--accent-color);
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   padding: 30px;
   margin-bottom: 30px;
@@ -1196,7 +1203,7 @@ section,
 
 .contact .info-item i {
   font-size: 20px;
-  color: var(--accent-color);
+  color: var(--default-color);
   width: 56px;
   height: 56px;
   display: flex;
@@ -1204,7 +1211,7 @@ section,
   align-items: center;
   transition: all 0.3s ease-in-out;
   border-radius: 50%;
-  border: 1px solid color-mix(in srgb, var(--accent-color), transparent 40%);
+  border: 1px solid color-mix(in srgb, var(--default-color), transparent 40%);
   margin-right: 15px;
 }
 
@@ -1221,12 +1228,12 @@ section,
 }
 
 .contact .info-item:hover i {
-  background: var(--accent-color);
+  background: var(--heading-color);
   color: var(--contrast-color);
 }
 
 .contact .php-email-form {
-  background-color: var(--surface-color);
+  background-color: var(--accent-color);
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   padding: 30px;
 }
@@ -1244,10 +1251,10 @@ section,
   padding: 10px 15px;
   box-shadow: none;
   border-radius: 0;
-  color: var(--default-color);
+  color: var(--background-color);
   background-color: color-mix(
     in srgb,
-    var(--background-color),
+    var(--contrast-color),
     transparent 50%
   );
   border-color: color-mix(in srgb, var(--default-color), transparent 80%);
@@ -1256,13 +1263,13 @@ section,
 .contact .php-email-form input[type="text"]:focus,
 .contact .php-email-form input[type="email"]:focus,
 .contact .php-email-form textarea:focus {
-  border-color: var(--accent-color);
+  border-color: var(--contrast-color);
 }
 
 .contact .php-email-form input[type="text"]::placeholder,
 .contact .php-email-form input[type="email"]::placeholder,
 .contact .php-email-form textarea::placeholder {
-  color: color-mix(in srgb, var(--default-color), transparent 70%);
+  color: color-mix(in srgb, var(--contrast-color), transparent 70%);
 }
 
 .contact .php-email-form button[type="submit"] {
@@ -1275,7 +1282,7 @@ section,
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: color-mix(in srgb, var(--accent-color), transparent 20%);
+  background: color-mix(in srgb, var(--nav-dropdown-hover-color), transparent 20%);
 }
 
 /*--------------------------------------------------------------
