--- a/Folio/assets/css/main.css
+++ b/Folio/assets/css/main.css
@@ -78,6 +78,9 @@ a {
   text-decoration: none;
   transition: 0.3s;
 }
+.portfolio-content img.proj {
+  height: 270px;
+}
 
 a:hover {
   color: color-mix(in srgb, var(--accent-color), transparent 25%);
@@ -110,7 +113,6 @@ h3 {
   font-weight: 600;
 }
 
-
 .php-email-form .sent-message {
   display: none;
   color: #ffffff;
@@ -120,7 +122,7 @@ h3 {
   margin-bottom: 24px;
   font-weight: 600;
 }
-.description{
+.description {
   text-align: justify;
 }
 
@@ -244,13 +246,13 @@ h3 {
   .navmenu li:hover > a,
   .navmenu .active,
   .navmenu .active:focus {
-    color: var(--nav-hover-color);
+    color: var(--background-color);/*font color*/
   }
 
   .navmenu .dropdown ul {
     margin: 0;
     padding: 10px 0;
-    background: var(--nav-dropdown-background-color);
+    background: var(--background-color);
     display: block;
     position: absolute;
     visibility: hidden;
@@ -271,7 +273,7 @@ h3 {
     padding: 10px 20px;
     font-size: 15px;
     text-transform: none;
-    color: var(--nav-dropdown-color);
+    color: var(--background-colorr);
   }
 
   .navmenu .dropdown ul a i {
@@ -307,7 +309,7 @@ h3 {
 /* Navmenu - Mobile */
 @media (max-width: 1199px) {
   .mobile-nav-toggle {
-    color: var(--nav-color);
+    color: var(--nav-color);/*menu color*/
     font-size: 28px;
     line-height: 0;
     margin-right: 10px;
@@ -328,7 +330,7 @@ h3 {
     padding: 10px 0;
     margin: 0;
     border-radius: 6px;
-    background-color: var(--nav-mobile-background-color);
+    background-color: var(--nav-dropdown-hover-color);
     overflow-y: auto;
     transition: 0.3s;
     z-index: 9998;
@@ -337,7 +339,7 @@ h3 {
 
   .navmenu a,
   .navmenu a:focus {
-    color: var(--nav-dropdown-color);
+    color: var(--background-color);/* font color mobile font menu*/
     padding: 10px 20px;
     font-family: var(--nav-font);
     font-size: 17px;
@@ -361,7 +363,11 @@ h3 {
     justify-content: center;
     border-radius: 50%;
     transition: 0.3s;
-    background-color: color-mix(in srgb, var(--accent-color), transparent 90%);
+    background-color: color-mix(
+      in srgb,
+      var(--background-color),
+      transparent 90%
+    );
   }
 
   .navmenu a i:hover,
@@ -373,7 +379,9 @@ h3 {
   .navmenu a:hover,
   .navmenu .active,
   .navmenu .active:focus {
-    color: var(--nav-dropdown-hover-color);
+    color: var(
+      --nav-dropdown-background-color
+    ); /*Active Selected menu ex. portfolio*/
   }
 
   .navmenu .active i,
@@ -405,11 +413,11 @@ h3 {
   }
 
   .mobile-nav-active {
-    overflow: hidden;
+    overflow:hidden;
   }
 
   .mobile-nav-active .mobile-nav-toggle {
-    color: #fff;
+    color: #fff; /*for exit  color*/
     position: absolute;
     font-size: 32px;
     top: 15px;
@@ -1249,11 +1257,7 @@ section,
   box-shadow: none;
   border-radius: 0;
   color: var(--background-color);
-  background-color: color-mix(
-    in srgb,
-    var(--contrast-color),
-    transparent 50%
-  );
+  background-color: color-mix(in srgb, var(--contrast-color), transparent 50%);
   border-color: color-mix(in srgb, var(--default-color), transparent 80%);
 }
 
@@ -1279,7 +1283,11 @@ section,
 }
 
 .contact .php-email-form button[type="submit"]:hover {
-  background: color-mix(in srgb, var(--nav-dropdown-hover-color), transparent 20%);
+  background: color-mix(
+    in srgb,
+    var(--nav-dropdown-hover-color),
+    transparent 20%
+  );
 }
 
 /*--------------------------------------------------------------
