--- a/web-portfolio/assets/css/main.css
+++ b/web-portfolio/assets/css/main.css
@@ -297,7 +297,7 @@ h3 {
 /* Navmenu - Mobile */
 @media (max-width: 1199px) {
   .mobile-nav-toggle {
-    color: var(--nav-color); /*menu color*/
+    color: var(--nav-color); /*menu icon color*/
     font-size: 28px;
     line-height: 0;
     margin-right: 10px;
