--- a/web-portfolio/assets/css/main.css
+++ b/web-portfolio/assets/css/main.css
@@ -88,6 +88,64 @@ h3 {
   text-align: justify;
   margin-bottom: 2%;
 }
+/*cv */
+.cv {
+  display: grid;
+  place-items: center;
+  margin-top: 150px;
+  gap: 30px;
+}
+/*button cv style*/
+/* Ensure the <a> tag does not affect styling */
+a {
+  text-decoration: none; /* Remove underline */
+}
+
+/* Button Styles */
+.cv-btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--accent-color);
+  color: var(--contrast-color);
+  font-size: 16px;
+  font-weight: 400;
+  padding: 12px 24px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  transition: background 0.3s ease, transform 0.2s ease, color 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin-top: 25px;
+}
+
+.cv-btn:hover {
+  background-color: var(--contrast-color);
+  color: black;
+  transform: translateY(-2px);
+}
+
+/*animation or slow open for cv site*/
+body {
+  opacity: 0;
+  animation: fadeIn 0.3s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Rotate icon on toggle */
+body.dark .toggle-btn i {
+  transform: rotate(180deg);
+}
 
 /* PHP Email Form Messages
 ------------------------------*/
@@ -425,6 +483,12 @@ h3 {
   .mobile-nav-active .navmenu > ul {
     display: block;
   }
+  /*mobile view cv button*/
+  .cv-btn {
+    padding: 8px 16px; 
+    font-size: 15px; 
+    border-radius: 6px; 
+  }
 }
 
 /*--------------------------------------------------------------
@@ -714,7 +778,7 @@ section,
 }
 
 .hero .social-links a {
-  font-size: 24px;
+  font-size: 30px;
   display: inline-block;
   color: color-mix(in srgb, var(--default-color), transparent 50%);
   line-height: 1;
@@ -725,39 +789,7 @@ section,
 .hero .social-links a:hover {
   color: var(--accent-color);
 }
-/*darkmode-lightmode
-#toggle-mode {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  background: transparent;
-  border: 5px;
-  padding: 10px 20px;
-  font-size: 20px;
-  font-weight: bold;
-  color: var(--default-color);
-  border-radius: 50px 50px;
-  cursor: pointer;
-  transition: background 0.3s, transform 0.2s;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-  margin-top: 20px;
-  
-}
 
-#toggle-mode:hover {
-  background: color-mix(
-    in srgb,
-    var(--nav-dropdown-hover-color),
-    transparent 20%
-  );
-}
-
-
-.icon {
-  font-size: 20px;
-}*/
-/* Center the button */
-/* Centering the button */
 
 @media (max-width: 768px) {
   .hero h2 {
@@ -767,6 +799,30 @@ section,
   .hero p {
     font-size: 20px;
   }
+  
+.hero .social-links a{
+  font-size: 20px;
+}
+.hero .cv-btn {
+  font-size: 10px;
+  padding: 10px 20px;
+  border-radius: 6px;
+}
+.cv {
+  margin-top: 80px; 
+  gap: 20px;
+}
+
+.cv-img {
+  width: 100% !important; 
+  display: flex;
+  justify-content: center;
+}
+
+.cv-img img {
+  width: 100%; 
+  height: auto;
+}
 }
 
 /*--------------------------------------------------------------
